# file-renamer

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
file_renamer/: __init__.py  core.py
tests/: test_file_renamer.py
